// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders successfully with no props 1`] = `
<Tooltip>
  <div
    className="XR__tooltip___UYyhn"
  />
</Tooltip>
`;

exports[`Tooltip renders successfully with text 1`] = `
<Tooltip
  text="Test Tooltip"
>
  <div
    className="XR__tooltip___UYyhn"
    data-text="Test Tooltip"
  />
</Tooltip>
`;
